<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:background="@color/DarkPrimaryColor"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RegisterActivity"
    android:id="@+id/rootLayout">

    <RelativeLayout
        android:id="@+id/appNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_centerHorizontal="true">

        <com.romainpiel.shimmer.ShimmerTextView
            android:id="@+id/loyal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_60sdp"
            android:text="loyal"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/TextIcons"
            app:reflectionColor="#721"/>

        <TextView
            android:id="@+id/bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/loyal"
            android:textSize="@dimen/_50sdp"
            android:layout_centerVertical="true"
            android:text="BAG"
            android:textColor="@color/TextIcons"/>

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignBottom="@id/bag"
            android:layout_toRightOf="@id/bag"
            android:background="@drawable/ic_bag"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLayout"
        android:layout_alignParentBottom="true">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="CANCEL"
            android:background="@color/MaterialGrey"
            materialdesign:rippleSpeed="70"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/font_size"/>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/registerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="REGISTER"
            android:background="@color/AccentColor"
            materialdesign:rippleSpeed="70"
            android:textColor="@color/White"
            android:textSize="@dimen/font_size"/>

    </LinearLayout>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/usernameFloat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appNameLayout"
        float:fletTextAppearance="@style/FloatLabeledEditTextStyle"
        float:fletPadding="@dimen/activity_flet_padding">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/user_name_maxLength"
            android:singleLine="true"
            android:hint="@string/username"
            android:textStyle="normal"
            android:textColor="@color/TextIcons"
            android:backgroundTint="@color/TextIcons"
            android:textColorHint="@color/TextIcons"
            android:drawableLeft="@drawable/ic_user_white"
            android:drawablePadding="@dimen/_10sdp"
            android:textSize="@dimen/font_size"/>
        />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/passwordFloat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameFloat"
        float:fletTextAppearance="@style/FloatLabeledEditTextStyle"
        float:fletPadding="@dimen/activity_flet_padding">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/password_maxLength"
            android:singleLine="true"
            android:hint="@string/password"
            android:textStyle="normal"
            android:password="true"
            android:textColor="@color/TextIcons"
            android:backgroundTint="@color/TextIcons"
            android:textColorHint="@color/TextIcons"
            android:drawableLeft="@drawable/ic_password_white"
            android:drawablePadding="@dimen/_10sdp"
            android:textSize="@dimen/font_size"/>
        />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/confirmPasswordFloat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordFloat"
        float:fletTextAppearance="@style/FloatLabeledEditTextStyle"
        float:fletPadding="@dimen/activity_flet_padding">

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/password_maxLength"
            android:singleLine="true"
            android:hint="@string/confirmpassword"
            android:password="true"
            android:textStyle="normal"
            android:textColor="@color/TextIcons"
            android:backgroundTint="@color/TextIcons"
            android:textColorHint="@color/TextIcons"
            android:drawableLeft="@drawable/ic_password_white"
            android:drawablePadding="@dimen/_10sdp"
            android:textSize="@dimen/font_size"/>
        />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/fullnameFloat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPasswordFloat"
        float:fletTextAppearance="@style/FloatLabeledEditTextStyle"
        float:fletPadding="@dimen/activity_flet_padding">

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/fullname_maxLength"
            android:singleLine="true"
            android:hint="@string/fullname"
            android:textStyle="normal"
            android:textColor="@color/TextIcons"
            android:backgroundTint="@color/TextIcons"
            android:textColorHint="@color/TextIcons"
            android:drawableLeft="@drawable/fullname_ic_white"
            android:drawablePadding="@dimen/_10sdp"
            android:textSize="@dimen/font_size"/>
        />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/phoneFloat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullnameFloat"
        float:fletTextAppearance="@style/FloatLabeledEditTextStyle"
        float:fletPadding="@dimen/activity_flet_padding">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/phone_maxLength"
            android:singleLine="true"
            android:hint="@string/phonenumber"
            android:textStyle="normal"
            android:textColor="@color/TextIcons"
            android:phoneNumber="true"
            android:backgroundTint="@color/TextIcons"
            android:textColorHint="@color/TextIcons"
            android:drawableLeft="@drawable/ic_phone_white"
            android:drawablePadding="@dimen/_10sdp"
            android:textSize="@dimen/font_size"/>
        />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

</RelativeLayout>
